SERVER-77237 Fail tenant migration upon observing an internal session for retryable writes.

(cherry picked from commit 2a43d888fa8ffa8525f40112eee427eaf75f059c)
(cherry picked from commit 8e4e316f9b6a6799cb030e4f1f9f6012bb8416c1)